top half styles complete

--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 <body>
     <div class='container'>
         <div id='top' class='row'>
-            <div class='trOne thin'></div>
-            <div class='trTwo thin'></div>
-            <div class='trThree thin'></div>
+            <div class='XXsmall white thin'></div>
+            <div class='small white thin'></div>
+            <div class='yellow thin rightend Xlarge'></div>
         </div>
-        <div></div>
-        <div></div>
+        <div class='row' id='middle'>
+            <div class='medium white thin'></div>
+            <div class='large white thin'></div>
+            <div class='small white thin rightend'></div>
+        </div>
+        <div class='row' id='bottom'>
+            <div></div>
+            <div></div>
+            <div class='blue small thin rightend'></div>
+        </div>
     </div>
 </body>
 </html>
