--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
             <div class='yellow thin rightend Xlarge'></div>
         </div>
         <div class='row' id='middle'>
-            <div class='medium white thin'></div>
-            <div class='large white thin'></div>
+            <div class='medium white thin words'><h1 class='words important'>Emil<br> Schroder</h1></div>
+            <div id='title' class='large white thin words'><h1  class='words important'>web developer</h1></div>
             <div class='small white thin rightend'></div>
         </div>
         <div class='row' id='bottom'>
-            <div></div>
-            <div></div>
-            <div class='blue small thin rightend'></div>
+            <div class='col medium'>
+                <div id='overbox' class='full white thin'></div>
+                <div id='underbox' class='row full'>
+                    <div id='subboxone' class='white thin Xlarge'></div>
+                    <div id='subboxtwo' class='white thin medium'></div>
+                </div>
+            </div>
+            <div class='col large'>
+                <div id='highrect' class='white thin full words'></div>
+                <div id='lowrect' class='red thin base full'></div>
+            </div>
+            <div class='blue small thin rightend base'></div>
         </div>
     </div>
 </body>
