basic page ready to go

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Emil Schroder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
@@ -15,8 +15,12 @@
             <div class='yellow thin rightend Xlarge'></div>
         </div>
         <div class='row' id='middle'>
-            <div class='medium white thin words'><h1 class='words important'>Emil<br> Schroder</h1></div>
-            <div id='title' class='large white thin words'><h1  class='words important'>web developer</h1></div>
+            <div class='medium white thin words'>
+                <h1 class='words important'>Emil<br> Schroder</h1>
+            </div>
+            <div id='title' class='large white thin words'>
+                <h1  class='words important'>web developer</h1>
+            </div>
             <div class='small white thin rightend'></div>
         </div>
         <div class='row' id='bottom'>
@@ -28,7 +32,11 @@
                 </div>
             </div>
             <div class='col large'>
-                <div id='highrect' class='white thin full words'></div>
+                <div id='highrect' class='white thin full words'>
+                    <h1 class="links">GitHub&#10166;</h1>
+                    <h1 class="links">MilkFinder&#10166;</h1>
+                    <h1 class="links">LinkedIn&#10166;</h1>
+                </div>
                 <div id='lowrect' class='red thin base full'></div>
             </div>
             <div class='blue small thin rightend base'></div>
