added server to personal page

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,9 +33,9 @@
             </div>
             <div class='col large'>
                 <div id='highrect' class='white thin full words'>
-                    <h1 class="links">GitHub&#10166;</h1>
-                    <h1 class="links">MilkFinder&#10166;</h1>
-                    <h1 class="links">LinkedIn&#10166;</h1>
+                    <p class="links">GitHub</p>
+                    <p class="links">Works</p>
+                    <p class="links">LinkedIn</p>
                 </div>
                 <div id='lowrect' class='red thin base full'></div>
             </div>
