--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,7 @@
     <title>Emil Schroder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 </head>
 <body>
     <div id='app'></div>
